[iOS] Fix crash in Collection Cell Catalog

The Collection Cell Catalog is crashing because some items were
converted from CollectionItem to TableViewItem.

Bug: 915687
Change-Id: Ib87377b243e4e32046c287aedacb868a127af8be
Reviewed-on: https://chromium-review.googlesource.com/c/1380031
Reviewed-by: Yi Su <mrsuyi@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#617132}
Former-commit-id: c142fad5cc24f61942a92cfd402da45e25025ad5